--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build:client:prod": "webpack -p",
     "build:server:prod": "babel src -s -D -d build",
     "start:server:prod": "node build/index.js",
-    "storybook": "start-storybook -p 9000 -c storybook",
-    "heroku-postbuild": "npm setup"
+    "storybook": "start-storybook -p 9000 -c storybook"
   },
   "keywords": [],
   "author": "",
