--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 NODE_ENV=development
-APP_URL=http://localhost:3000
+APP_URL=https://crate-web.herokuapp.com
 APP_URL_API=https://crate-abhidp.herokuapp.com
