--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 NODE_ENV=development
-APP_URL=https://crate-web.herokuapp.com
-APP_URL_API=https://crate-abhidp.herokuapp.com
+APP_URL=https://crate-react-web.herokuapp.com
+APP_URL_API=https://crate-graphql-api.herokuapp.com
